# Desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
monitor/: CMakeLists.txt  db_monitor  main.c  monitor
monitor/glade/: monitor_ui.glade  monitor_ui.glade~
scripts/: setup_if.sh
